Fix problem of invisible carousel images (overflow:visible)

--- a/client/css/global.css
+++ b/client/css/global.css
@@ -453,7 +453,7 @@ input.icon {
 	position: relative;
 	background: #fff;
 	height: 100%; /* 100% of #topbookings parent container */
-	overflow:hidden;
+	overflow:visible;
 
 	-webkit-transition: 	left .5s ease-in-out;
 	-moz-transition: 		left .5s ease-in-out;
